feat: simplify string formatting in StyleRegistry for improved readability